--- a/about.html
+++ b/about.html
@@ -216,7 +216,7 @@ div.desc {
     </a>
     <img src="/assets/img/dp.png" style="width:60% ;" class="w3-round" ><br><br>
     <h3>Saif Ahammod Khan</h3>
-    <p class="w3-text-light-grey">AI & Robotics Researcher</p>
+    <p class="w3-text-light-grey">RA at NIRO Lab || AI & Robotics Researcher || Co-Founder of Codatron</p>
   </div>
   <div class="w3-bar-block">
     <a href="/about.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding" style="color: #00b3ff;"><i class="fa fa-user fa-fw w3-margin-right"></i>ABOUT</a> 
@@ -261,35 +261,43 @@ div.desc {
     <h3>About Me</h3>
     <hr>
     <div style="text-align: justify;">
-        <p >I was born on December 15, 1998, in the vibrant city of Rajshahi, Bangladesh. 
-            While my roots are in Rajshahi, I currently live in Dhaka, where I am pursuing 
-            my academic and professional goals with dedication and passion.</p>
-        <p >I hold a <b>Bachelor of Science in Computer Science and Engineering</b>, which I completed 
-            with the distinction of <b>"Magna Cum Laude."</b> This achievement reflects my commitment to 
-            academic excellence. Currently, I am pursuing a <b>Master of Science in Computer Science 
-            and Engineering at North South University</b>, where I continue to enhance my knowledge and 
-            skills in my field of study. In addition to my academic pursuits, I work as a <b>Graduate 
-            Teaching Assistant</b>, where I assist in the learning and development of undergraduate students.</p>
-        <p >My career aspirations are deeply rooted in both <b>researching and teaching</b>. I have a strong research 
-            interest in the areas of <b>Artificial Intelligence and Robotics</b>, which I believe hold immense 
-            potential for shaping the future of technology. Previously, I have had the opportunity to 
-            conduct research on <b>Human-Computer Interaction as well as Artificial Intelligence and Robotics</b>, 
-            which has strengthened my understanding and passion for these domains. My aim is to contribute 
-            to advancements in these fields and share my knowledge through teaching and mentorship.</p>
-        <p >Beyond academics and work, I have a range of hobbies that keep me engaged and energized. 
-            I am passionate about <b>photography</b>, where I capture moments and stories through the lens 
-            of my camera. <b>Reading books</b> is another favorite pastime, allowing me to explore new ideas 
-            and expand my understanding of various topics. I also enjoy playing <b>video games</b>, which not 
-            only offer entertainment but also enhance my strategic thinking and creativity. <b>Watching 
-            movies and series</b> is a great way for me to unwind and appreciate different forms of 
-            storytelling. <b>Football</b> is a sport I love both watching and playing, as it keeps me active 
-            and connected with the thrill of competition.Additionally, I have a deep interest in <b>graphic design</b>, 
-            where I enjoy expressing my creativity and experimenting with visual elements. This skill 
-            complements my academic background, allowing me to combine technical expertise with artistic expression.</p>
-        <p >In summary, <b>I am a dedicated individual with a passion for research, teaching, and creativity</b>. 
-            My journey continues as I strive to make meaningful contributions to the fields of Artificial 
-            Intelligence and Robotics, while also enjoying a well-rounded life filled with hobbies and interests 
-            that keep me inspired.</p>
+        <p >I am originally from the vibrant city of <b style="color: #00b3ff;">Rajshahi</b>, Bangladesh, 
+          and currently reside in <b style="color: #00b3ff;">Dhaka</b>, where I am pursuing my academic 
+          and professional journey with dedication and purpose.I hold a <b style="color: #00b3ff;">Bachelor 
+          of Science (BSc) in Computer Science and Engineering</b>, which I completed with the distinction of 
+          <b style="color: #00b3ff;"> <i>Magna Cum Laude</i></b>. Currently, I am enrolled in the 
+          <b style="color: #00b3ff;"> Master of Science (MSc) in Computer Science and Engineering</b> program 
+          at <b>North South University</b>, where I continue to expand my expertise in the field. Alongside 
+          my graduate studies, I am working as a Research Assistant at the <b style="color: #00b3ff;">
+          NIRO Lab (North South University Intelligent Robotics Lab),</b> focusing on advanced research
+          in Artificial Intelligence and Robotics, including the <b>design, fabrication, and development 
+          of complex and autonomous robotic systems</b> .Previously, I served as a <b style="color: #00b3ff;">
+          Graduate Teaching Assistant</b>, where I supported graduate and undergraduate courses by proctoring exams, 
+          evaluating assignments, assisting students with their studies, and <b>conducting sessions on Python, 
+          robotics problem-solving, and core programming concepts.</b>
+          My primary career goal is to become a <b style="color: #00b3ff;">researcher and educator</b>, 
+          contributing meaningfully to both academic knowledge and the practical advancement of technology. 
+          I am particularly passionate about <b style="color: #00b3ff;">Artificial Intelligence and 
+          Robotics</b>, fields that I believe will define the next era of innovation. My research journey so 
+          far has included work in <b>Human-Computer Interaction, autonomous systems, and multi-agent robotics</b>. 
+          Beyond academia, I am actively involved in two key initiatives. As the <b style="color: #00b3ff;">
+          Founder of Codatron</b>, my vision is to <b>solve complex societal problems in Bangladesh using AI and 
+          Robotics</b>, foster homegrown research and development, <b>increase employment opportunities in the tech
+          sector, and provide hands-on training to the next generation of engineers.</b> Additionally, through 
+          <b style="color: #00b3ff;">ARC-BD</b> , I aim to establish and expand <b>Bangladesh’s first community-driven
+            AI and robotics ecosystem to empower youth and promote collaborative innovation.</b>
+          Outside of work and research, I enjoy a variety of hobbies that keep me creatively and mentally 
+          engaged. I’m passionate about <b style="color: #00b3ff;">photography, reading books, and graphic 
+          design</b>, all of which allow me to express myself visually and intellectually. I also enjoy playing
+          <b style="color: #00b3ff;">video games, watching movies and series</b>, and staying active through 
+          <b>football, both as a player and a fan.</b></p>
+          <p>In summary, I am a driven and <b style="color: #00b3ff;">multidisciplinary individual</b> with a 
+          <b style="color: #00b3ff;"> passion for research, teaching, and community development.</b> I aspire to 
+          contribute to the technological growth of my country through innovation, mentorship, and collaboration 
+          in the fields of <b style="color: #00b3ff;">AI and robotics.</b></p>
+
+
+
     </div>
 
   <!-- Images of Me -->
@@ -312,7 +320,7 @@ div.desc {
             <h6>January 2023 - Present</h6>
             <h3>MS in Computer Science And Engineering</h3>
             <h5>North South University</h5>
-            <p><b>CGPA:</b> 3.96 out of 4.00 (21.00 Credits complete) </p>
+            <p><b>CGPA:</b> 3.97 out of 4.00 (24.00 Credits complete) </p>
             <p><b>Trail:</b> TBA</p>
             <p><b>Thesis:</b> TBA</p>
           </div>
@@ -404,33 +412,45 @@ div.desc {
   <div class="w3-row-padding">
     <div class="w3-third">
       <h3>codatron.com</h3>
-      <p style="text-align: justify;">Codatron offers IT solutions for businesses and students, 
-        including coding help, project/product development, content 
-        writing, vlog, newsletter etc. Whether you need tech project 
-        suggestions or assistance bringing visions to life, we’re here with you.</p>
-          <p style="text-align: justify;">Youtube: youtube.com/@Codatron</p>
-          <p style="text-align: justify;">Facebook: facebook.com/codatronbd</p>
-          <p style="text-align: justify;">Email: codatron.bd@gmail.com</p>
+      <p style="text-align: justify;">
+        Codatron is a research-based tech initiative committed to solving real-world problems using 
+        Artificial Intelligence and Robotics. We focus on developing innovative tech solutions, 
+        offering project and product development support, and delivering hands-on training for students 
+        and professionals. Codatron also engages in knowledge sharing through blogs, vlogs, and newsletters. 
+        Whether you're looking to learn, build, or innovate, we’re here to guide you with research, 
+        mentorship, and cutting-edge technology.</p>
+          <p style="text-align: justify;"><b style="color:bisque">Email: codatron.bd@gmail.com</b></p>
+          <a href="https://codatron.com/"><b style="color:bisque;">OUR WEBSITE>></b></a>
     </div>
   
     <div class="w3-third" style="color: #E1F7F5;">
       <h3>Socal Platform</h3>
       <ul class="w3-ul w3-hoverable">
         <li class="w3-padding-16">
-          <img src="/assets/img/b1.jpg" class="w3-left w3-margin-right" style="width:50px; border: 2px solid #00b3ff;">
-          <span class="w3-large">Codatron</span><br>
-          <span><a href="https://www.facebook.com/codatronbd/">Visit Page</a></span>
+          <img src="/assets/img/icon/youtube.png" class="w3-left w3-margin-right" style="width:50px; border: 2px solid #00b3ff;">
+          <span class="w3-large">Codatron Youtube</span><br>
+          <span><a href="https://www.youtube.com/@Codatron">Visit>>></a></span>
         </li>
         <li class="w3-padding-16">
-          <img src="/assets/img/b2.jpg" class="w3-left w3-margin-right" style="width:50px ; border: 2px solid #00b3ff;">
-          <span class="w3-large"> S. A. Khan Photography</span><br>
-          <span><a href="https://www.facebook.com/sakhanphotography34/">Visit Page</a></span>
+          <img src="/assets/img/icon/facebook.png" class="w3-left w3-margin-right" style="width:50px ; border: 2px solid #00b3ff;">
+          <span class="w3-large"> Codatron Facebook</span><br>
+          <span><a href="https://www.facebook.com/codatronbd/">Visit>>></a></span>
         </li> 
         <li class="w3-padding-16">
-          <img src="/assets/img/b3.jpg" class="w3-left w3-margin-right" style="width:50px ; border: 2px solid #00b3ff;">
-          <span class="w3-large">Snowman Gaming</span><br>
-          <span><a href="https://www.facebook.com/snowman0421/">Visit Page</a></span>
+          <img src="/assets/img/icon/linkedin.png" class="w3-left w3-margin-right" style="width:50px ; border: 2px solid #00b3ff;">
+          <span class="w3-large">Codatron Linkedin</span><br>
+          <span><a href="https://www.linkedin.com/company/codatron">Visit>>></a></span>
+        </li>
+        <li class="w3-padding-16">
+          <img src="/assets/img/icon/communication.png" class="w3-left w3-margin-right" style="width:50px ; border: 2px solid #00b3ff;">
+          <span class="w3-large">Codatron Discord</span><br>
+          <span><a href="https://discord.gg/NmGBxj6H">Visit>>></a></span>
         </li> 
+        <li class="w3-padding-16">
+          <img src="/assets/img/icon/community.png" class="w3-left w3-margin-right" style="width:50px ; border: 2px solid #00b3ff;">
+          <span class="w3-large">AI & Robotics Community</span><br>
+          <span><a href="https://www.facebook.com/groups/arcbangladesh">Visit>>></a></span>
+        </li>
       </ul>
     </div>
 
