--- a/research.html
+++ b/research.html
@@ -224,7 +224,7 @@ div.desc {
     </a>
     <img src="/assets/img/dp.png" style="width:60%;" class="w3-round" ><br><br>
     <h3>Saif Ahammod Khan</h3>
-    <p class="w3-text-light-grey">AI & Robotics Researcher</p>
+    <p class="w3-text-light-grey">RA at NIRO Lab || AI & Robotics Researcher || Co-Founder of Codatron</p>
   </div>
   <div class="w3-bar-block">
     <a href="/about.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding" ><i class="fa fa-user fa-fw w3-margin-right"></i>ABOUT</a> 
@@ -351,33 +351,45 @@ div.desc {
   <div class="w3-row-padding">
     <div class="w3-third">
       <h3>codatron.com</h3>
-      <p style="text-align: justify;">Codatron offers IT solutions for businesses and students, 
-        including coding help, project/product development, content 
-        writing, vlog, newsletter etc. Whether you need tech project 
-        suggestions or assistance bringing visions to life, we’re here with you.</p>
-          <p style="text-align: justify;">Youtube: youtube.com/@Codatron</p>
-          <p style="text-align: justify;">Facebook: facebook.com/codatronbd</p>
-          <p style="text-align: justify;">Email: codatron.bd@gmail.com</p>
+      <p style="text-align: justify;">
+        Codatron is a research-based tech initiative committed to solving real-world problems using 
+        Artificial Intelligence and Robotics. We focus on developing innovative tech solutions, 
+        offering project and product development support, and delivering hands-on training for students 
+        and professionals. Codatron also engages in knowledge sharing through blogs, vlogs, and newsletters. 
+        Whether you're looking to learn, build, or innovate, we’re here to guide you with research, 
+        mentorship, and cutting-edge technology.</p>
+          <p style="text-align: justify;"><b style="color:bisque">Email: codatron.bd@gmail.com</b></p>
+          <a href="https://codatron.com/"><b style="color:bisque;">OUR WEBSITE>></b></a>
     </div>
   
     <div class="w3-third" style="color: #E1F7F5;">
       <h3>Socal Platform</h3>
       <ul class="w3-ul w3-hoverable">
         <li class="w3-padding-16">
-          <img src="/assets/img/b1.jpg" class="w3-left w3-margin-right" style="width:50px; border: 2px solid #00b3ff;">
-          <span class="w3-large">Codatron</span><br>
-          <span><a href="https://www.facebook.com/codatronbd/">Visit Page</a></span>
+          <img src="/assets/img/icon/youtube.png" class="w3-left w3-margin-right" style="width:50px; border: 2px solid #00b3ff;">
+          <span class="w3-large">Codatron Youtube</span><br>
+          <span><a href="https://www.youtube.com/@Codatron">Visit>>></a></span>
         </li>
         <li class="w3-padding-16">
-          <img src="/assets/img/b2.jpg" class="w3-left w3-margin-right" style="width:50px ; border: 2px solid #00b3ff;">
-          <span class="w3-large"> S. A. Khan Photography</span><br>
-          <span><a href="https://www.facebook.com/sakhanphotography34/">Visit Page</a></span>
+          <img src="/assets/img/icon/facebook.png" class="w3-left w3-margin-right" style="width:50px ; border: 2px solid #00b3ff;">
+          <span class="w3-large"> Codatron Facebook</span><br>
+          <span><a href="https://www.facebook.com/codatronbd/">Visit>>></a></span>
         </li> 
         <li class="w3-padding-16">
-          <img src="/assets/img/b3.jpg" class="w3-left w3-margin-right" style="width:50px ; border: 2px solid #00b3ff;">
-          <span class="w3-large">Snowman Gaming</span><br>
-          <span><a href="https://www.facebook.com/snowman0421/">Visit Page</a></span>
+          <img src="/assets/img/icon/linkedin.png" class="w3-left w3-margin-right" style="width:50px ; border: 2px solid #00b3ff;">
+          <span class="w3-large">Codatron Linkedin</span><br>
+          <span><a href="https://www.linkedin.com/company/codatron">Visit>>></a></span>
+        </li>
+        <li class="w3-padding-16">
+          <img src="/assets/img/icon/communication.png" class="w3-left w3-margin-right" style="width:50px ; border: 2px solid #00b3ff;">
+          <span class="w3-large">Codatron Discord</span><br>
+          <span><a href="https://discord.gg/NmGBxj6H">Visit>>></a></span>
         </li> 
+        <li class="w3-padding-16">
+          <img src="/assets/img/icon/community.png" class="w3-left w3-margin-right" style="width:50px ; border: 2px solid #00b3ff;">
+          <span class="w3-large">AI & Robotics Community</span><br>
+          <span><a href="https://www.facebook.com/groups/arcbangladesh">Visit>>></a></span>
+        </li>
       </ul>
     </div>
 
