--- a/temp.html
+++ b/temp.html
@@ -250,27 +250,49 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
   </div>
 
   <!-- Footer -->
-  <footer class="w3-container w3-padding-32 w3-dark-grey">
+  <footer class="w3-container w3-padding-32" style="background-color: #070F2B;">
   <div class="w3-row-padding">
     <div class="w3-third">
-      <h3>FOOTER</h3>
-      <p>Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
-      <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
+      <h3>codatron.com</h3>
+      <p style="text-align: justify;">
+        Codatron is a research-based tech initiative committed to solving real-world problems using 
+        Artificial Intelligence and Robotics. We focus on developing innovative tech solutions, 
+        offering project and product development support, and delivering hands-on training for students 
+        and professionals. Codatron also engages in knowledge sharing through blogs, vlogs, and newsletters. 
+        Whether you're looking to learn, build, or innovate, we’re here to guide you with research, 
+        mentorship, and cutting-edge technology.</p>
+          <p style="text-align: justify;"><b style="color:bisque">Email: codatron.bd@gmail.com</b></p>
+          <a href="https://codatron.com/"><b style="color:bisque;">OUR WEBSITE>></b></a>
     </div>
   
-    <div class="w3-third">
-      <h3>BLOG POSTS</h3>
+    <div class="w3-third" style="color: #E1F7F5;">
+      <h3>Socal Platform</h3>
       <ul class="w3-ul w3-hoverable">
         <li class="w3-padding-16">
-          <img src="/w3images/workshop.jpg" class="w3-left w3-margin-right" style="width:50px">
-          <span class="w3-large">Lorem</span><br>
-          <span>Sed mattis nunc</span>
+          <img src="/assets/img/icon/youtube.png" class="w3-left w3-margin-right" style="width:50px; border: 2px solid #00b3ff;">
+          <span class="w3-large">Codatron Youtube</span><br>
+          <span><a href="https://www.youtube.com/@Codatron">Visit>>></a></span>
         </li>
         <li class="w3-padding-16">
-          <img src="/w3images/gondol.jpg" class="w3-left w3-margin-right" style="width:50px">
-          <span class="w3-large">Ipsum</span><br>
-          <span>Praes tinci sed</span>
+          <img src="/assets/img/icon/facebook.png" class="w3-left w3-margin-right" style="width:50px ; border: 2px solid #00b3ff;">
+          <span class="w3-large"> Codatron Facebook</span><br>
+          <span><a href="https://www.facebook.com/codatronbd/">Visit>>></a></span>
         </li> 
+        <li class="w3-padding-16">
+          <img src="/assets/img/icon/linkedin.png" class="w3-left w3-margin-right" style="width:50px ; border: 2px solid #00b3ff;">
+          <span class="w3-large">Codatron Linkedin</span><br>
+          <span><a href="https://www.linkedin.com/company/codatron">Visit>>></a></span>
+        </li>
+        <li class="w3-padding-16">
+          <img src="/assets/img/icon/communication.png" class="w3-left w3-margin-right" style="width:50px ; border: 2px solid #00b3ff;">
+          <span class="w3-large">Codatron Discord</span><br>
+          <span><a href="https://discord.gg/NmGBxj6H">Visit>>></a></span>
+        </li> 
+        <li class="w3-padding-16">
+          <img src="/assets/img/icon/community.png" class="w3-left w3-margin-right" style="width:50px ; border: 2px solid #00b3ff;">
+          <span class="w3-large">AI & Robotics Community</span><br>
+          <span><a href="https://www.facebook.com/groups/arcbangladesh">Visit>>></a></span>
+        </li>
       </ul>
     </div>
 
