--- a/research.html
+++ b/research.html
@@ -267,10 +267,63 @@ div.desc {
     <hr>
     <h3>Publication</h3>
     <hr>
-  <div class="conference">
-    <h5 style="color: #1B1A55;">Journal Paper</h5>
+      <div class="conference">
+    <h5 style="color: #1B1A55;">Underprocessing Paper</h5>
   </div>
   <ol>
+  <li><h4>NIRO Edu Bot: A Configurable Mobile Robotics Platform for Hands-On Education and Research.</h4></li>
+    <p>
+      <!-- <i style="color: #00b3ff;">Asian CHI Symposium 2022 Special Publication.  </i> 
+        <br> -->
+        <b>Overview:</b>
+        The purpose of an educational robot is to facilitate research and provide students with practical experience in 
+        robotics within academic settings. Since different research areas demand varying hardware configurations, a flexible 
+        and customizable platform is essential. To address this need, we present the NIRO EDU Bot, a fully designed and 
+        fabricated robot developed at the NSU Intelligent Robotics Lab. It comes with built-in components such as a gyroscope, 
+        IR sensors, encoder motors, WiFi connectivity, and integrates both Raspberry Pi and Arduino for processing. 
+        Additionally, users can enhance the system with configurable hardware like LiDAR, depth cameras, microphone arrays, 
+        and AprilTags based on their research requirements. The robot features a 3D-designed body, a custom-built motherboard 
+        for a compact structure, and is built on a differential drive mechanism.
+
+    <!-- <br>
+    <b style="color: #00b3ff;">DOI: </b> -->
+    </p>
+
+      <li><h4>Graph Based Methods for Text Summarization: A Systematic Literature Review</h4></li>
+    <!-- <p><i style="color: #00b3ff;">Asian CHI Symposium 2022 Special Publication.  </i>
+        <br>
+        <b>Overview:</b>
+        This study explores the challenges faced by Bangladeshis in accessing healthcare, 
+        especially during the COVID-19 pandemic, with a focus on government hospital limitations. 
+        Interviews with 32 participants from diverse backgrounds revealed issues such as difficulty 
+        in finding suitable doctors and limited information on medication costs. Participants 
+        suggested potential online solutions to address these gaps. Based on these insights, the 
+        study offers recommendations for developing online healthcare platforms to improve access 
+        and ease of healthcare services in Bangladesh.
+
+    <br>
+    <b style="color: #00b3ff;">DOI: </b>
+    </p> -->
+  </ol> 
+  <div class="conference">
+    <h5 style="color: #1B1A55;">Published Paper</h5>
+  </div>
+  <ol>
+     <li><h4>Understanding the Healthcare Sector in Bangladesh: Experiences and Services during the COVID-19 Pandemic.</h4></li>
+    <p><i style="color: #00b3ff;">Asian CHI Symposium 2022 Special Publication.  </i>
+        <br>
+        <b>Overview:</b>
+        This study explores the challenges faced by Bangladeshis in accessing healthcare, 
+        especially during the COVID-19 pandemic, with a focus on government hospital limitations. 
+        Interviews with 32 participants from diverse backgrounds revealed issues such as difficulty 
+        in finding suitable doctors and limited information on medication costs. Participants 
+        suggested potential online solutions to address these gaps. Based on these insights, the 
+        study offers recommendations for developing online healthcare platforms to improve access 
+        and ease of healthcare services in Bangladesh.
+
+    <br>
+    <b style="color: #00b3ff;">ISBN: 978-0-9942763-2-2</b>
+    </p>
     <li><h4>Alpha N-V2: Shortest Path Finder Automated Delivery Robot with Real-Time Object Detection and Avoiding System.</h4></li>
     <p><i style="color: #00b3ff;"> Journal of Computer Science (VJCS), Issue-7, No 4, Nov 2020.</i> 
         <br>
@@ -286,14 +339,7 @@ div.desc {
     <b style="color: #00b3ff;">DOI: https://doi.org/10.1142/S2196888820500219</b>
     </p>
 
-    <!-- <li>Tea</li>
-    <li>Milk</li> -->
-  </ol>  
-  <div class="conference">
-    <h5 style="color: #1B1A55;">Book Chapter</h5>
-  </div>
-  <ol>
-    <li><h4>Alpha-N: Shortest Path Finder Automated Delivery Robot with Obstacle Detection and Avoiding System</h4></li>
+     <li><h4>Alpha-N: Shortest Path Finder Automated Delivery Robot with Obstacle Detection and Avoiding System</h4></li>
     <p>
       <i style="color: #00b3ff;">Asian Conference on Intelligent Information and Database Systems, (pp. 202-213). Springer, Cham. . </i>
     
@@ -311,30 +357,8 @@ div.desc {
 
     <!-- <li>Tea</li>
     <li>Milk</li> -->
-  </ol> 
-  <div class="conference">
-    <h5 style="color: #1B1A55;">Conferance</h5>
-  </div>
-  <ol>
-    <li><h4>Understanding the Healthcare Sector in Bangladesh: Experiences and Services during the COVID-19 Pandemic.</h4></li>
-    <p><i style="color: #00b3ff;">Asian CHI Symposium 2022 Special Publication.  </i>
-        <br>
-        <b>Overview:</b>
-        This study explores the challenges faced by Bangladeshis in accessing healthcare, 
-        especially during the COVID-19 pandemic, with a focus on government hospital limitations. 
-        Interviews with 32 participants from diverse backgrounds revealed issues such as difficulty 
-        in finding suitable doctors and limited information on medication costs. Participants 
-        suggested potential online solutions to address these gaps. Based on these insights, the 
-        study offers recommendations for developing online healthcare platforms to improve access 
-        and ease of healthcare services in Bangladesh.
-
-    <br>
-    <b style="color: #00b3ff;">ISBN: 978-0-9942763-2-2</b>
-    </p>
-
-    <!-- <li>Tea</li>
-    <li>Milk</li> -->
-  </ol> 
+  </ol>  
+  
 
 
 
