--- a/research.html
+++ b/research.html
@@ -290,20 +290,24 @@ div.desc {
     </p>
 
       <li><h4>Graph Based Methods for Text Summarization: A Systematic Literature Review</h4></li>
-    <!-- <p><i style="color: #00b3ff;">Asian CHI Symposium 2022 Special Publication.  </i>
-        <br>
+    <p>
+      <!-- <i style="color: #00b3ff;">Asian CHI Symposium 2022 Special Publication.  </i>
+        <br> -->
         <b>Overview:</b>
-        This study explores the challenges faced by Bangladeshis in accessing healthcare, 
-        especially during the COVID-19 pandemic, with a focus on government hospital limitations. 
-        Interviews with 32 participants from diverse backgrounds revealed issues such as difficulty 
-        in finding suitable doctors and limited information on medication costs. Participants 
-        suggested potential online solutions to address these gaps. Based on these insights, the 
-        study offers recommendations for developing online healthcare platforms to improve access 
-        and ease of healthcare services in Bangladesh.
+        Text summarization is an essential task in natural language processing, aimed at condensing large volumes of text into concise,
+meaningful summaries to address the challenges of navigating vast amounts of digital content generated daily. While extractive
+and abstractive summarization techniques are widely used, graph-based methods have emerged as powerful tools due to their
+ability to model relationships between textual components such as sentences and words. Despite their growing adoption, there is
+a lack of recent and comprehensive systematic reviews focused on the application of graph theory in text summarization. This
+study addresses this gap by systematically reviewing graph-based approaches to text summarization, including techniques such as
+TextRank, PageRank, LexRank, graph centrality, clustering, and Graph Neural Networks (GNNs). It explores their methodologies,
+advantages, and limitations while identifying trends, gaps, and future opportunities. The findings highlight the need for improved
+dataset diversity, support for multilingual and low-resource languages, and integration of deep learning with traditional graph-based
+methods. This review provides valuable insights to guide future research and innovation in graph-based text summarization.
 
-    <br>
-    <b style="color: #00b3ff;">DOI: </b>
-    </p> -->
+    <!-- <br>
+    <b style="color: #00b3ff;">DOI: </b> -->
+    </p>
   </ol> 
   <div class="conference">
     <h5 style="color: #1B1A55;">Published Paper</h5>
