GUI Changed a lot

--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 <title>About</title>
 <link rel="icon" type="image/x-icon" href="assets/img/logo.png">
@@ -16,17 +16,19 @@
 <body class="w3-content" style="max-width:1600px">
 
 <!-- Sidebar/menu -->
-<nav class="w3-sidebar w3-collapse w3-animate-left" style="z-index:3;width:300px; background-color: #070F2B;" id="mySidebar"><br>
+<nav class="w3-sidebar w3-collapse w3-animate-left" style="z-index:3;width:300px; background: linear-gradient(to bottom, #0d0208, #042B58, #0c0532);" id="mySidebar"><br>
   <div class="w3-container">
     <a href="#" onclick="w3_close()" class="w3-hide-large w3-right w3-jumbo w3-padding w3-hover-grey" title="close menu">
       <i class="fa fa-remove"></i>
     </a>
-    <img src="/assets/img/dp.png" style="width:60% ;" class="w3-round" ><br><br>
+    <img src="/assets/img/dp.png" style="width:60%; display: block; margin: auto;" class="w3-round">
+
+    <br><br>
     <h3>Saif Ahammod Khan</h3>
-    <p class="w3-text-light-grey">RA at NIRO Lab || AI & Robotics Researcher || Co-Founder of Codatron</p>
+    <p class="text-role"></p>
   </div>
   <div class="w3-bar-block">
-    <a href="/about.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding" style="color: #00b3ff;"><i class="fa fa-user fa-fw w3-margin-right"></i>ABOUT</a> 
+    <a href="/about.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding active"><i class="fa fa-user fa-fw w3-margin-right"></i>ABOUT</a>
     <a href="/research.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-lightbulb-o fa-fw w3-margin-right"></i>RESEARCH </a> 
     <a href="/project.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-bug fa-fw w3-margin-right"></i>PROJECT </a> 
     <a href="/experience.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-suitcase fa-fw w3-margin-right"></i>EXPERIENCE</a> 
@@ -37,7 +39,7 @@
     <a href="/gallery.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-camera fa-fw w3-margin-right"></i>GALLERY</a>
     <a href="/assets/doc/cv.pdf" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-paperclip fa-fw w3-margin-right"></i>RESUME</a>
   </div>
-  <div class="w3-panel w3-large" style="color: #00b3ff;">
+  <div class="w3-panel w3-large">
     <!-- <a href="Codatron.com"><i class="fa fa-suitcase w3-hover-opacity"></i></a> -->
     <a href="https://www.facebook.com/SaifAhammod04/"><i class="fa fa-facebook-official w3-hover-opacity"></i></a>
     <!-- <a href=""><i class="fa fa-youtube w3-hover-opacity"></i></a> -->
@@ -68,40 +70,41 @@
     <h3>About Me</h3>
     <hr>
     <div style="text-align: justify;">
-        <p >I am originally from the vibrant city of <b style="color: #00b3ff;">Rajshahi</b>, Bangladesh, 
-          and currently reside in <b style="color: #00b3ff;">Dhaka</b>, where I am pursuing my academic 
-          and professional journey with dedication and purpose.I hold a <b style="color: #00b3ff;">Bachelor 
+  
+        <p >I am originally from the vibrant city of <b>Rajshahi</b>, Bangladesh, 
+          and currently reside in <b>Dhaka</b>, where I am pursuing my academic 
+          and professional journey with dedication and purpose.I hold a <b>Bachelor 
           of Science (BSc) in Computer Science and Engineering</b>, which I completed with the distinction of 
-          <b style="color: #00b3ff;"> <i>Magna Cum Laude</i></b>. Currently, I am enrolled in the 
-          <b style="color: #00b3ff;"> Master of Science (MSc) in Computer Science and Engineering</b> program 
+          <b> <i>Magna Cum Laude</i></b>. Currently, I am enrolled in the 
+          <b> Master of Science (MSc) in Computer Science and Engineering</b> program 
           at <b>North South University</b>, where I continue to expand my expertise in the field. Alongside 
-          my graduate studies, I am working as a Research Assistant at the <b style="color: #00b3ff;">
+          my graduate studies, I am working as a Research Assistant at the <b>
           NIRO Lab (North South University Intelligent Robotics Lab),</b> focusing on advanced research
           in Artificial Intelligence and Robotics, including the <b>design, fabrication, and development 
-          of complex and autonomous robotic systems</b> .Previously, I served as a <b style="color: #00b3ff;">
+          of complex and autonomous robotic systems</b> .Previously, I served as a <b >
           Graduate Teaching Assistant</b>, where I supported graduate and undergraduate courses by proctoring exams, 
           evaluating assignments, assisting students with their studies, and <b>conducting sessions on Python, 
           robotics problem-solving, and core programming concepts.</b>
-          My primary career goal is to become a <b style="color: #00b3ff;">researcher and educator</b>, 
+          My primary career goal is to become a <b>researcher and educator</b>, 
           contributing meaningfully to both academic knowledge and the practical advancement of technology. 
-          I am particularly passionate about <b style="color: #00b3ff;">Artificial Intelligence and 
+          I am particularly passionate about <b>Artificial Intelligence and 
           Robotics</b>, fields that I believe will define the next era of innovation. My research journey so 
           far has included work in <b>Human-Computer Interaction, autonomous systems, and multi-agent robotics</b>. 
-          Beyond academia, I am actively involved in two key initiatives. As the <b style="color: #00b3ff;">
+          Beyond academia, I am actively involved in two key initiatives. As the <b>
           Founder of Codatron</b>, my vision is to <b>solve complex societal problems in Bangladesh using AI and 
           Robotics</b>, foster homegrown research and development, <b>increase employment opportunities in the tech
           sector, and provide hands-on training to the next generation of engineers.</b> Additionally, through 
-          <b style="color: #00b3ff;">ARC-BD</b> , I aim to establish and expand <b>Bangladesh’s first community-driven
+          <b>ARC-BD</b> , I aim to establish and expand <b>Bangladesh’s first community-driven
             AI and robotics ecosystem to empower youth and promote collaborative innovation.</b>
           Outside of work and research, I enjoy a variety of hobbies that keep me creatively and mentally 
-          engaged. I’m passionate about <b style="color: #00b3ff;">photography, reading books, and graphic 
+          engaged. I’m passionate about <b>photography, reading books, and graphic 
           design</b>, all of which allow me to express myself visually and intellectually. I also enjoy playing
-          <b style="color: #00b3ff;">video games, watching movies and series</b>, and staying active through 
+          <b>video games, watching movies and series</b>, and staying active through 
           <b>football, both as a player and a fan.</b></p>
-          <p>In summary, I am a driven and <b style="color: #00b3ff;">multidisciplinary individual</b> with a 
-          <b style="color: #00b3ff;"> passion for research, teaching, and community development.</b> I aspire to 
+          <p>In summary, I am a driven and <b>multidisciplinary individual</b> with a 
+          <b> passion for research, teaching, and community development.</b> I aspire to 
           contribute to the technological growth of my country through innovation, mentorship, and collaboration 
-          in the fields of <b style="color: #00b3ff;">AI and robotics.</b></p>
+          in the fields of <b>AI and robotics.</b></p>
 
 
 
@@ -226,11 +229,11 @@
         and professionals. Codatron also engages in knowledge sharing through blogs, vlogs, and newsletters. 
         Whether you're looking to learn, build, or innovate, we’re here to guide you with research, 
         mentorship, and cutting-edge technology.</p>
-          <p style="text-align: justify;"><b style="color:bisque">Email: codatron.bd@gmail.com</b></p>
-          <a href="https://codatron.com/"><b style="color:bisque;">OUR WEBSITE>></b></a>
+          <p style="text-align: justify;"><b>Email: codatron.bd@gmail.com</b></p>
+          <a href="https://codatron.com/">OUR WEBSITE>></a>
     </div>
   
-    <div class="w3-third" style="color: #E1F7F5;">
+    <div class="w3-third"">
       <h3>Socal Platform</h3>
       <ul class="w3-ul w3-hoverable">
         <li class="w3-padding-16">
@@ -265,45 +268,34 @@
       <h3>POPULAR TAGS</h3>
       <p>
         <span class="w3-tag w3-white w3-margin-bottom">Research</span> 
-        <span class="w3-tag w3-black w3-small w3-margin-bottom">AI</span> 
-        <span class="w3-tag w3-black w3-small w3-margin-bottom">Robotics</span>
-        <span class="w3-tag w3-black w3-small w3-margin-bottom">Machine Learning</span> 
-        <span class="w3-tag w3-black w3-small w3-margin-bottom">JAVA</span> 
-        <span class="w3-tag w3-black w3-small w3-margin-bottom">DEEP LEARNING</span>
-        <span class="w3-tag w3-black w3-small w3-margin-bottom">C</span> 
-        <span class="w3-tag w3-black w3-small w3-margin-bottom">C++</span> 
-        <span class="w3-tag w3-black w3-small w3-margin-bottom">Ideas</span> 
-        <span class="w3-tag w3-black w3-small w3-margin-bottom">Algorithm</span>
-        <span class="w3-tag w3-black w3-small w3-margin-bottom">NSU</span> 
-        <span class="w3-tag w3-black w3-small w3-margin-bottom">Programming</span> 
-        <span class="w3-tag w3-black w3-small w3-margin-bottom">Invention</span>
-        <span class="w3-tag w3-black w3-small w3-margin-bottom">Games</span> 
-        <span class="w3-tag w3-black w3-small w3-margin-bottom">Rajshahi</span>
-        <span class="w3-tag w3-black w3-small w3-margin-bottom">Dhaka</span>
-        <span class="w3-tag w3-small w3-margin-bottom" style="color: red; background-color: rgb(8, 134, 8);">Bangladesh</span>
+        <span class="w3-tag w3-black w3-margin-bottom">AI</span> 
+        <span class="w3-tag w3-black w3-margin-bottom">Robotics</span>
+        <span class="w3-tag w3-black w3-margin-bottom">Machine Learning</span> 
+        <span class="w3-tag w3-black w3-margin-bottom">JAVA</span> 
+        <span class="w3-tag w3-black w3-margin-bottom">DEEP LEARNING</span>
+        <span class="w3-tag w3-black w3-margin-bottom">C</span> 
+        <span class="w3-tag w3-black w3-margin-bottom">C++</span> 
+        <span class="w3-tag w3-black w3-margin-bottom">Ideas</span> 
+        <span class="w3-tag w3-black w3-margin-bottom">Algorithm</span>
+        <span class="w3-tag w3-black w3-margin-bottom">NSU</span> 
+        <span class="w3-tag w3-black w3-margin-bottom">Programming</span> 
+        <span class="w3-tag w3-black w3-margin-bottom">Invention</span>
+        <span class="w3-tag w3-black w3-margin-bottom">Games</span> 
+        <span class="w3-tag w3-black w3-margin-bottom">Rajshahi</span>
+        <span class="w3-tag w3-black w3-margin-bottom">Dhaka</span>
+        <span class="w3-tag w3-black w3-margin-bottom">Bangladesh</span>
       </p>
     </div>
 
   </div>
   </footer>
   
-  <div class="w3-black w3-center w3-padding-24">All right reserved</div>
+  <div class="w3-black w3-center w3-padding-24"><p class="text-footerNote"></p></div>
 
 <!-- End page content -->
 </div>
 
-<script>
-// Script to open and close sidebar
-function w3_open() {
-    document.getElementById("mySidebar").style.display = "block";
-    document.getElementById("myOverlay").style.display = "block";
-}
- 
-function w3_close() {
-    document.getElementById("mySidebar").style.display = "none";
-    document.getElementById("myOverlay").style.display = "none";
-}
-</script>
-
+<!-- Link your JavaScript -->
+  <script src="main.js"></script>
 </body>
 </html>
